--- a/ula_mips/db/ula_mips.lpc.html
+++ b/ula_mips/db/ula_mips.lpc.html
@@ -16,6 +16,38 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >registrador_decoder</TD>
+<TD >35</TD>
+<TD >33</TD>
+<TD >0</TD>
+<TD >33</TD>
+<TD >32</TD>
+<TD >33</TD>
+<TD >33</TD>
+<TD >33</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >decoder</TD>
+<TD >32</TD>
+<TD >2</TD>
+<TD >1</TD>
+<TD >2</TD>
+<TD >3</TD>
+<TD >2</TD>
+<TD >2</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >memoriaDados</TD>
 <TD >44</TD>
 <TD >0</TD>
