--- a/ula_mips/db/ula_mips.lpc.html
+++ b/ula_mips/db/ula_mips.lpc.html
@@ -194,13 +194,13 @@
 <TR >
 <TD >controlador1</TD>
 <TD >119</TD>
-<TD >1</TD>
+<TD >33</TD>
 <TD >0</TD>
-<TD >1</TD>
+<TD >33</TD>
 <TD >115</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
+<TD >33</TD>
+<TD >33</TD>
+<TD >33</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -598,6 +598,22 @@
 <TD >0</TD>
 <TD >0</TD>
 <TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >divisor</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
